fix(section-title): reduce bottom margin on mobile

--- a/src/components/ui/sectionTitle/SectionTitle.module.scss
+++ b/src/components/ui/sectionTitle/SectionTitle.module.scss
@@ -13,6 +13,10 @@
     margin-bottom: 60px;
   }
 
+  @include mobile {
+    margin-bottom: 40px;
+  }
+
   &Block {
     margin-bottom: 40px;
   }
